@@ -1,3 +1,7 @@
+2025-02-22  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-find-executable): Fix check.
+
 2025-02-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-cache.el (with-tramp-saved-connection-property): Fix typo.
